--- a/scss/bootstrap/_navbar.scss
+++ b/scss/bootstrap/_navbar.scss
@@ -529,9 +529,9 @@
   height: 300px;
   background-color: rgb(24, 23, 23);
   opacity: 0;
-  transition: opacity 0.7s ease;
+  transition: opacity 0.5s ease;
   &:hover{
-    opacity: 0.7;
+    opacity: 0.9;
   }
   z-index: 1;
   &:hover .fa-play-circle{
@@ -558,5 +558,5 @@
 }
 
 body{
-  background-color: ;
+  background-color: rgb(31, 30, 30);
 }
