--- a/scss/bootstrap/_navbar.scss
+++ b/scss/bootstrap/_navbar.scss
@@ -560,3 +560,30 @@
 body{
   background-color: rgb(31, 30, 30);
 }
+
+.content-info{
+  text-align: center;
+  font-family: monospace;
+  font-size: 12px;
+  color: wheat;
+}
+
+.text-danger{
+  color: red;
+}
+
+.navbar-brand{
+  letter-spacing: 1px;
+  padding: 3px;
+  padding-left: 14px;
+  padding-right: 14px;
+  background-color: orange;
+  border-radius: 5px;
+}
+
+.Search{
+  width: 800px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-radius: 3px;
+}
